# Ktiseos-Nyx-Trainer

./: .dockerignore  .gitattributes  .gitignore  .snyk  AGENTS.md  ATTRIBUTIONS.md  BETA_PLANNING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_RESTRUCTURE.md  Dockerfile  Dockerfile.vastai  Finetuning_Trainer.ipynb  GEMINI.md  GRADIO_MOCKUP_README.md  LICENSE  MIGRATION_PROGRESS.md  PATH_TRACE_VERIFICATION.md  QWEN.md  RAM_LEAK_INVESTIGATION.md  README.md  REFACTOR_FINAL.md  REMAINING_MIGRATION.md  ROADMAP.md  SECURITY.md  STATUS.md  TAGGING_NODE_MIGRATION.md  TESTING_GUIDE.md  TEST_BACKEND.md  TRAINING_CONFIG_PLAN.md  V1_ARCHITECTURE.md  VASTAI_SETUP.md  VASTAI_TEMPLATE.txt  VASTAI_TEMPLATE_CONFIG.txt  clean_slate.py  convert_bmaltais_presets.py  diagnose.bat  diagnose.py  (+35 more)
.github/: FUNDING.yml  dependabot.yml
api/: __init__.py  main.py
archive/: CLEANUP_OLD_CODE.md  Dockerfile.backup  PR_DESCRIPTION.md  SUPERVISOR_SETUP.txt  VASTAI_TEMPLATE_CONFIG.txt  VASTAI_TEMPLATE_README.md  coder_response.txt  docker-compose.yml  vastai_template_config copy.txt  vastai_template_configold.txt
core/: custom_validation.py  dataset_manager.py  file_upload_manager.py  finetuning_manager.py  flux_inference_manager.py  image_curation_manager.py  inference_utils.py  kohya_inference_manager.py  kohya_training_manager.py  log_streamer.py  logging_config.py  managers.py  refactored_training_manager.py  sd15_inference_manager.py  sd3_inference_manager.py  sdxl_inference_manager.py  standalone_validation.py  utilities_manager.py
custom/: anima_merge_lora.py  tag_images_by_wd14_tagger.py
docker/: start_services.sh  startup.sh
docs/: DEPLOYMENT.md  EASY_FIXES_TODO.md  FEATURES.md  FRONTEND_GUIDELINES.md  FRUSTRATIONS_GROCERY_LIST.md  GETTING_STARTED_NEXTJS.md  INSTALLATION.md  Morning Coffee Checklist.md  NEXTJS_ARCHITECTURE.md  README.md  ROADMAP.md  SECURITY_FIXES.md  UI_FEATURES.md  VASTAI_TEMPLATE_GUIDE.md  VASTAI_TEMPLATE_README.md  info.md  quickstart.md  schema_reference.csv  troubleshooting.md  upstream-bug-fixes-2026-05-05.md
frontend/: .gitignore  CLAUDE.md  OPTIMIZATIONS_APPLIED.md  README.md  SHADCN_COMPONENTS.md  THEMING.md  cleanup-dead-code.bat  cleanup-dead-code.sh  components-old.json  components.json  (+9 more)
(+709 files in other folders)
